# codeprompts

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: release-build.yml  rust-docs.yml
cli/: Cargo.toml
cli/completions/: codeprompt-completions.bash  codeprompt-completions.fish  codeprompt-completions.ps1  codeprompt-completions.zsh
cli/src/: files.rs  git.rs  lib.rs  main.rs  spinner.rs  template.rs  validation.rs
codeprompt/: all.html  index.html  sidebar-items.js
codeprompt/constants/: constant.CUSTOM_TEMPLATE_NAME.html  constant.DEFAULT_TEMPLATE_NAME.html  constant.PROGRESS_SPINNER_TICK.html  index.html  sidebar-items.js
codeprompt/files/: fn.basename.html  fn.parse_comma_delim_patterns.html  fn.traverse_directory.html  index.html  sidebar-items.js
codeprompt/git/: fn.fetch_github_issue.html  fn.get_repo_info.html  fn.git_diff.html  index.html  sidebar-items.js  struct.Issue.html
codeprompt/logging/: fn.setup.html  index.html
docs/: README.md  general_usage.md  git_features.md  options.md  setup.md  tui_config_file.md
src/: files.rs  git.rs  lib.rs  logging.rs  main.rs  spinner.rs  template.rs  tokenizer.rs  validation.rs
src/codeprompt/: git.rs.html  (+7 more)
tui/: Cargo.toml  codeprompt.toml
tui/src/: app.rs  config.rs  handler.rs  help.rs  lib.rs  main.rs  ui.rs
tui/src/event/: handler.rs
tui/src/panels/: file_tree.rs  mod.rs  options_panel.rs  templates_panel.rs
tui/src/types/: command.rs  config.rs  file_node.rs  mod.rs
tui/src/ui/: draw.rs  mod.rs  style.rs
(+34 files in other folders)
