[package]
name = "codeprompt"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arboard = "3.4.0"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
git2 = "0.19.0"
glob = "0.3.1"
handlebars = "5.1.2"
ignore = "0.4.22"
indicatif = "0.17.8"
serde_json = "1.0.120"
termtree = "0.4.1"
tiktoken-rs = "0.5.9"
